<resources>
    <string name="app_name">Аварийный комиссар ГИБДД12.рф</string>
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
    <string name="nav_header_title">Аварийный комиссар ГИБДД12.рф</string>
    <string name="nav_header_subtitle">тел.: 709 - 709</string>
    <string name="nav_header_desc">Навигация</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_promo">Акции</string>
    <string name="menu_connect">Погода</string>
    <string name="menu_firma">О нас</string>

    <!-- PROMO -->
    <string name="text_promo_header">Внимание ⚠ 🚔 Хочешь получить 300 рублей?,
        а может быть хочешь 50 литров топлива на халяву? или скидку на страховку по ОСАГО - 5%? присоединяйся к гибдд12.рф в вайбере, и получай скидки и подарки!
        😃 Розыгрыш призов каждую неделю!!!  📢 Вся оперативная информация о ДТП, пробках в городе, местонахождения ДПС по Йошкар-Оле, в оперативном чате, от аварийного комиссара гибдд12.рф 👉🏻
    </string>
    <string name="bottom_text_viber">Перейти в оперативный чат VIBER</string>
    <!-- PROMO -->

    <!-- FIRMA -->
    <string name="text_firma">ИП Ковалёва Ю.С.
    инн 121524178574 огрнип 316121500063612
    Городская Инспекция Безопасности Дорожного Движения
    г.Йошкар-Ола, ул.Красноармейская, д.84а, офис 2.</string>

    <string name="text_firma_o_nas">Аварийный комиссар ГИБДД12.РФ (#АВАРКОМ) Йошкар-Ола, работает с 2014 года, за это время было оформлено более 8000 тысяч ДТП,
    наши аварийные комиссары имеют большой опыт работы, оперативно прибудут на место ДТП и помогут Вам оформить ДТП,
    собрать комплект документов для получения страховой выплаты! Тел.: 8 (8362) 709-709 ✆</string>
        <!-- FIRMA -->

    <!--ActivityWeather-->
    <string name="text_city_w">Город:</string>
    <string name="text_city_g">Градусы</string>
    <string name="text_city_p">Давление</string>
    <string name="text_city_h">Влажность</string>
    <string name="text_city_s">Скорость ветра</string>
    <string name="buttonReload">Обновить</string>
    <string name="buttonWorld">Погода в мире</string>
    <string name="city_name_search">Название города..</string>
    <!--ActivityWeather-->

</resources>