<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/promo"
            android:title="@string/menu_promo" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/connect"
            android:title="@string/menu_connect" />
    </group>

    <item android:title="@string/menu_firma">
        <menu>
            <item
                android:id="@+id/nav_firma"
                android:icon="@drawable/firma"
                android:title="@string/menu_firma"/>
        </menu>
    </item>
</menu>