<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_promo">

    <fragment
        android:id="@+id/nav_promo"
        android:name="com.geekbrains.avarkom.ui.promo.PromoFragment"
        android:label="@string/menu_promo"
        tools:layout="@layout/fragment_promo" />

    <fragment
        android:id="@+id/nav_connect"
        android:name="com.geekbrains.avarkom.ui.connect.ConnectFragment"
        android:label="@string/menu_connect"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/nav_firma"
        android:name="com.geekbrains.avarkom.ui.firma.FirmashowFragment"
        android:label="@string/menu_firma"
        tools:layout="@layout/fragment_firma" />
</navigation>